vcluster_versioned_docs/version-0.36.0/_partials/config/privateNodes.mdx

<details className="config-field" data-expandable="true">
<summary>

## `privateNodes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes}

PrivateNodes holds configuration for vCluster private nodes mode.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#privateNodes-enabled}

Enabled defines if dedicated nodes should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

### `kubelet` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-kubelet}

Kubelet holds kubelet configuration that is used for all nodes.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `config` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#privateNodes-kubelet-config}

Config is the config for the kubelet that will be merged into the default kubelet config. More information can be found here:
https://kubernetes.io/docs/reference/config-api/kubelet-config.v1beta1/#kubelet-config-k8s-io-v1beta1-KubeletConfiguration

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `autoUpgrade` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade}

AutoUpgrade holds configuration for auto upgrade.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-enabled}

Enabled defines if auto upgrade should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `image` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-image}

Image is the image for the auto upgrade pod started by vCluster. If empty defaults to the controlPlane.statefulSet.image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `imagePullPolicy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-imagePullPolicy}

ImagePullPolicy is the policy how to pull the image.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `nodeSelector` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-nodeSelector}

NodeSelector is the node selector for the auto upgrade. If empty will select all worker nodes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `binariesPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-binariesPath}

BinariesPath is the base path for the kubeadm binaries. Defaults to /usr/local/bin

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `cniBinariesPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-cniBinariesPath}

CNIBinariesPath is the base path for the CNI binaries. Defaults to /opt/cni/bin

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `concurrency` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default">1</span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-concurrency}

Concurrency is the number of nodes that can be upgraded at the same time.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `podSecurityContext` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-podSecurityContext}

PodSecurityContext specifies security context options on the pod level for the upgrade pod.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `containerSecurityContext` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default">&#123;&#125;</span> <span className="config-field-enum"></span> {#privateNodes-autoUpgrade-containerSecurityContext}

ContainerSecurityContext specifies security context options on the container level for the upgrade container.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `joinNode` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode}

JoinNode holds configuration specifically used during joining the node (see "kubeadm join").

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `preInstallCommands` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-preInstallCommands}

PreInstallCommands are commands that will be executed before containerd, kubelet etc. is installed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `preJoinCommands` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-preJoinCommands}

PreJoinCommands are commands that will be executed before kubeadm join is executed.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `postJoinCommands` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-postJoinCommands}

PostJoinCommands are commands that will be executed after kubeadm join is executed.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `containerd` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd}

Containerd holds configuration for the containerd join process.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-enabled}

Enabled defines if containerd should be installed and configured by vCluster.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `registry` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry}

Registry holds configuration for how containerd should be configured to use a registries.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `configPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-configPath}

ConfigPath is the path to the containerd registry config.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `mirrors` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors}

Mirrors holds configuration for the containerd registry mirrors. E.g. myregistry.io:5000 or docker.io. See https://github.com/containerd/containerd/blob/main/docs/hosts.md for more details.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `server` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-server}

Server is the fallback server to use for the containerd registry mirror. E.g. https://registry-1.docker.io. See https://github.com/containerd/containerd/blob/main/docs/hosts.md for more details.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caCert` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-caCert}

CACert are paths to CA certificates to use for the containerd registry mirror.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `skipVerify` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-skipVerify}

SkipVerify is a boolean to skip the certificate verification for the containerd registry mirror and allows http connections.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `capabilities` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-capabilities}

Capabilities is a list of capabilities to enable for the containerd registry mirror. If empty, will use pull and resolve capabilities.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `overridePath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-overridePath}

OverridePath is a boolean to override the path for the containerd registry mirror.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `hosts` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-hosts}

Hosts holds configuration for the containerd registry mirror hosts. See https://github.com/containerd/containerd/blob/main/docs/hosts.md for more details.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `server` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-hosts-server}

Server is the server to use for the containerd registry mirror host. E.g. http://192.168.31.250:5000.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `caCert` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-hosts-caCert}

CACert are paths to CA certificates to use for the containerd registry mirror host.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `skipVerify` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-hosts-skipVerify}

SkipVerify is a boolean to skip the certificate verification for the containerd registry mirror and allows http connections.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `capabilities` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-hosts-capabilities}

Capabilities is a list of capabilities to enable for the containerd registry mirror. If empty, will use pull and resolve capabilities.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `overridePath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-mirrors-hosts-overridePath}

OverridePath is a boolean to override the path for the containerd registry mirror.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `auth` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">&#123;key: object&#125;</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-auth}

Auth holds configuration for the containerd registry auth. See https://github.com/containerd/containerd/blob/main/docs/cri/registry.md#configure-registry-credentials for more details.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `username` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-auth-username}

Username is the username for the containerd registry.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `password` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-auth-password}

Password is the password for the containerd registry.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `identityToken` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-auth-identityToken}

IdentityToken is the token for the containerd registry.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `auth` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-registry-auth-auth}

Auth is the auth config for the containerd registry.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `pauseImage` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-containerd-pauseImage}

PauseImage is the image for the pause container.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `caCertPath` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-caCertPath}

CACertPath is the path to the SSL certificate authority used to
secure communications between node and control-plane.
Defaults to "/etc/kubernetes/pki/ca.crt".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `skipPhases` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-skipPhases}

SkipPhases is a list of phases to skip during command execution.
The list of phases can be obtained with the "kubeadm join --help" command.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeRegistration` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration}

NodeRegistration holds configuration for the node registration similar to the kubeadm node registration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `criSocket` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-criSocket}

CRI socket is the socket for the CRI.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `kubeletExtraArgs` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-kubeletExtraArgs}

KubeletExtraArgs passes through extra arguments to the kubelet. The arguments here are passed to the kubelet command line via the environment file
kubeadm writes at runtime for the kubelet to source. This overrides the generic base-level configuration in the kubelet-config ConfigMap
Flags have higher priority when parsing. These values are local and specific to the node kubeadm is executing on.
An argument name in this list is the flag name as it appears on the command line except without leading dash(es).
Extra arguments will override existing default arguments. Duplicate extra arguments are allowed.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-kubeletExtraArgs-name}

Name is the name of the argument.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-kubeletExtraArgs-value}

Value is the value of the argument.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `taints` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-taints}

Taints are additional taints to set for the kubelet.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-taints-key}

Required. The taint key to be applied to a node.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-taints-value}

The taint value corresponding to the taint key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `effect` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-taints-effect}

Required. The effect of the taint on pods
that do not tolerate the taint.
Valid effects are NoSchedule, PreferNoSchedule and NoExecute.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `ignorePreflightErrors` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-ignorePreflightErrors}

IgnorePreflightErrors provides a slice of pre-flight errors to be ignored when the current node is registered, e.g. 'IsPrivilegedUser,Swap'.
Value 'all' ignores errors from all checks.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `imagePullPolicy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-joinNode-nodeRegistration-imagePullPolicy}

ImagePullPolicy specifies the policy for image pulling during kubeadm "init" and "join" operations.
The value of this field must be one of "Always", "IfNotPresent" or "Never".
If this field is unset kubeadm will default it to "IfNotPresent", or pull the required images if not present on the host.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `autoNodes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes}

AutoNodes stores auto nodes configuration.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `provider` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-provider}

Provider is the node provider of the nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

#### `properties` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-properties}

Properties are the node provider properties. This is a simple key value map and can contain things
like region, subscription, etc. that is then used by the node provider to create the nodes and node environment.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `static` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static}

Static defines static node pools. Static node pools have a fixed size and are not scaled automatically.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-name}

Name is the name of this static nodePool

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `nodeTypeSelector` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-nodeTypeSelector}

NodeTypeSelector filters the types of nodes that can be provisioned by this pool.
All requirements must be met for a node type to be eligible.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `property` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-nodeTypeSelector-property}

Property is the property on the node type to select.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-nodeTypeSelector-operator}

Operator is the comparison operator, such as "In", "NotIn", "Exists". If empty, defaults to "In".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-nodeTypeSelector-values}

Values is the list of values to use for comparison. This is mutually exclusive with value.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-nodeTypeSelector-value}

Value is the value to use for comparison. This is mutually exclusive with values.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `taints` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-taints}

Taints are the taints to apply to the nodes in this pool.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-taints-key}

Required. The taint key to be applied to a node.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-taints-value}

The taint value corresponding to the taint key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `effect` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-taints-effect}

Required. The effect of the taint on pods
that do not tolerate the taint.
Valid effects are NoSchedule, PreferNoSchedule and NoExecute.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `nodeLabels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-nodeLabels}

NodeLabels are the labels to apply to the nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `terminationGracePeriod` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-terminationGracePeriod}

TerminationGracePeriod is the maximum duration the controller will wait before forcefully deleting the pods on a node, measured from when deletion is first initiated.

Warning: this feature takes precedence over a Pod's terminationGracePeriodSeconds value, and bypasses any blocked PDBs or the karpenter.sh/do-not-disrupt annotation.

This field is intended to be used by cluster administrators to enforce that nodes can be cycled within a given time period.
When set, drifted nodes will begin draining even if there are pods blocking eviction. Draining will respect PDBs and the do-not-disrupt annotation until the TGP is reached.

Karpenter will preemptively delete pods so their terminationGracePeriodSeconds align with the node's terminationGracePeriod.
If a pod would be terminated without being granted its full terminationGracePeriodSeconds prior to the node timeout,
that pod will be deleted at T = node timeout - pod terminationGracePeriodSeconds.

The feature can also be used to allow maximum time limits for long-running jobs which can delay node termination with preStop hooks.
Defaults to 30s. Set to Never to wait indefinitely for pods to be drained.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `quantity` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-quantity}

Quantity is the number of desired nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `profile` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-static-profile}

Profile references a NodeProfile applied to nodes created by this pool.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

#### `dynamic` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic}

Dynamic defines dynamic node pools. Dynamic node pools are scaled automatically based on the requirements within the cluster.
Karpenter is used under the hood to handle the scheduling of the nodes.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `name` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-name}

Name is the name of this NodePool

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `nodeTypeSelector` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-nodeTypeSelector}

NodeTypeSelector filters the types of nodes that can be provisioned by this pool.
All requirements must be met for a node type to be eligible.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `property` <span className="config-field-required" data-required="true">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-nodeTypeSelector-property}

Property is the property on the node type to select.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `operator` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-nodeTypeSelector-operator}

Operator is the comparison operator, such as "In", "NotIn", "Exists". If empty, defaults to "In".

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `values` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-nodeTypeSelector-values}

Values is the list of values to use for comparison. This is mutually exclusive with value.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-nodeTypeSelector-value}

Value is the value to use for comparison. This is mutually exclusive with values.

</summary>



</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

##### `taints` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-taints}

Taints are the taints to apply to the nodes in this pool.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `key` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-taints-key}

Required. The taint key to be applied to a node.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `value` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-taints-value}

The taint value corresponding to the taint key.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `effect` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-taints-effect}

Required. The effect of the taint on pods
that do not tolerate the taint.
Valid effects are NoSchedule, PreferNoSchedule and NoExecute.

</summary>



</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `nodeLabels` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-nodeLabels}

NodeLabels are the labels to apply to the nodes in this pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `limits` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-limits}

Limits specify the maximum resources that can be provisioned by this node pool,
mapping to the 'limits' field in Karpenter's NodePool API.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `disruption` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption}

Disruption contains the parameters that relate to Karpenter's disruption logic

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `consolidateAfter` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption-consolidateAfter}

ConsolidateAfter is the duration the controller will wait
before attempting to terminate nodes that are underutilized.
Refer to ConsolidationPolicy for how underutilization is considered.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `consolidationPolicy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption-consolidationPolicy}

ConsolidationPolicy describes which nodes Karpenter can disrupt through its consolidation
algorithm. This policy defaults to "WhenEmptyOrUnderutilized" if not specified

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

##### `budgets` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object[]</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption-budgets}

Budgets is a list of Budgets.
If there are multiple active budgets, Karpenter uses
the most restrictive value. If left undefined,
this will default to one budget with a value to 10%.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `nodes` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption-budgets-nodes}

Nodes dictates the maximum number of NodeClaims owned by this NodePool
that can be terminating at once. This is calculated by counting nodes that
have a deletion timestamp set, or are actively being deleted by Karpenter.
This field is required when specifying a budget.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `schedule` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption-budgets-schedule}

Schedule specifies when a budget begins being active, following
the upstream cronjob syntax. If omitted, the budget is always active.
Timezones are not supported.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `duration` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-disruption-budgets-duration}

Duration determines how long a Budget is active since each Schedule hit.
Only minutes and hours are accepted, as cron does not work in seconds.
If omitted, the budget is always active.
This is required if Schedule is set.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `terminationGracePeriod` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-terminationGracePeriod}

TerminationGracePeriod is the maximum duration the controller will wait before forcefully deleting the pods on a node, measured from when deletion is first initiated.

Warning: this feature takes precedence over a Pod's terminationGracePeriodSeconds value, and bypasses any blocked PDBs or the karpenter.sh/do-not-disrupt annotation.

This field is intended to be used by cluster administrators to enforce that nodes can be cycled within a given time period.
When set, drifted nodes will begin draining even if there are pods blocking eviction. Draining will respect PDBs and the do-not-disrupt annotation until the TGP is reached.

Karpenter will preemptively delete pods so their terminationGracePeriodSeconds align with the node's terminationGracePeriod.
If a pod would be terminated without being granted its full terminationGracePeriodSeconds prior to the node timeout,
that pod will be deleted at T = node timeout - pod terminationGracePeriodSeconds.

The feature can also be used to allow maximum time limits for long-running jobs which can delay node termination with preStop hooks.
Defaults to 30s. Set to Never to wait indefinitely for pods to be drained.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `expireAfter` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-expireAfter}

The amount of time a Node can live on the cluster before being removed

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `weight` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-weight}

Weight is the weight of this node pool.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `profile` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-autoNodes-dynamic-profile}

Profile references a NodeProfile applied to nodes created by this pool.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `vpn` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-vpn}

VPN holds configuration for the private nodes vpn. This can be used to connect the private nodes to the control plane or
connect the private nodes to each other if they are not running in the same network. Platform connection is required for the vpn to work.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#privateNodes-vpn-enabled}

Enabled defines if the private nodes vpn should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `nodeToNode` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-vpn-nodeToNode}

NodeToNode holds configuration for the node to node vpn. This can be used to connect the private nodes to each other if they are not running in the same network.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#privateNodes-vpn-nodeToNode-enabled}

Enabled defines if the node to node vpn should be enabled.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="true">
<summary>

### `daemon` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-daemon}

Daemon holds configuration for the private nodes daemon that is deployed on the nodes.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

#### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#privateNodes-daemon-enabled}

Enabled defines if the private nodes daemon should be enabled.

</summary>



</details>



<details className="config-field" data-expandable="true">
<summary>

#### `controlPlaneLoadBalancer` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-daemon-controlPlaneLoadBalancer}

ControlPlaneLoadBalancer holds configuration for the control plane load balancer. This is used to load balance the control plane traffic on the node to the control plane nodes.
This is useful to achieve true high availability for the control plane without having to deploy a separate load balancer.

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

##### `enabled` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#privateNodes-daemon-controlPlaneLoadBalancer-enabled}

Enabled defines if the control plane load balancer should be enabled. The control plane load balancer is used to load balance the control plane traffic on the node to the control plane nodes.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `kubeProxy` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">boolean</span> <span className="config-field-default">true</span> <span className="config-field-enum"></span> {#privateNodes-daemon-controlPlaneLoadBalancer-kubeProxy}

KubeProxy defines if the kube proxy should be proxied through the control plane load balancer as well.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

##### `port` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">integer</span> <span className="config-field-default">11343</span> <span className="config-field-enum"></span> {#privateNodes-daemon-controlPlaneLoadBalancer-port}

Port defines the port for the control plane load balancer.

</summary>



</details>


</details>


</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `defaultProfile` <span className="config-field-required" data-required="false"></span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#privateNodes-defaultProfile}

DefaultProfile is the name of a NodeProfile applied to nodes joining this vCluster that do not select one explicitly. Overridden by per-pool or per-node selection. Requires a platform connection to resolve.

</summary>



</details>


</details>
